--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -28,16 +28,31 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {
+    rotate: 0deg;
+    position: relative;
+    top: 0px;
+  }
+  to {
+    rotate: 45deg;
+    position: relative;
+    top: 34px;
+  }
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {opacity: 100%;}
+  to {opacity: 0%;}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {    
+    rotate: 0deg;
+    position: relative;
+    top: 0px;}
+  to { 
+    rotate: -45deg;
+    position: relative;
+    bottom: 34px;
+  }
 }
